[package]
name = "bluebird"
version = "0.1.2"
authors = ["Dan Rammer <hamersaw@gmail.com>"]

[dependencies]
hyper = "*"
rand = "*"
rust-crypto = "*"
rustc-serialize = "*"
time = "*"

[[example]]
name = "filter_stream"
path = "examples/stream/filter.rs"

[[example]]
name = "post_status_update"
path = "examples/statuses/update.rs"
