[package]
name = "bluebird"
version = "0.1.2"
authors = ["Dan Rammer <hamersaw@gmail.com>"]

[dependencies]
hyper = "*"
rand = "*"
rust-crypto = "*"
rustc-serialize = "*"
time = "*"

[[example]]
name = "filter_stream"
path = "examples/filter_stream.rs"

[[example]]
name = "post_status_update"
path = "examples/post_update_status.rs"

[[example]]
name = "get_user_show"
path = "examples/get_user_show.rs"
